# protopy

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 1a423f376999876c  22503945fcab490a  23761d9954e95d90  2c3ad5737ab18dd4  35c14085591f660a  36e521cae81bf0f0  37393041636a50c7  37bb76d800575c96  3aa32fa797c580a7  3aa9b3cccc8d6ebe  4dbec92ecabc1c1c  54cf86fc0ff46b02  6198bd8b50601f40  63e9aa3dfcf9868c  6e27d9ef7215b22a  6fabf49102f3e5d6  7c918e3eb4c9a031  7f9de6e954d4f888  869b698e6af90419  8eddd9ad91b9ec1f  922c2dad0371aff1  9c5f7d7643c818e4  b07c45ed05eaf91f  c4e1117b7b505913  d1091c1c153989fa  ee1429d2bede98d8  f4ef3fc822b32b2b  f91e36a57b57d8ba
protopy/: ast.py  grammar.py  lalr.py  parser.py  spans.py  symbol.py
scripts/: compute_snapshot_hash.py  dump_grammar.py  fetch_third_party_fixtures.py  generate_corpus.py
src/protopy/: __init__.py  api.py  ast.py  cli.py  errors.py  format.py  grammar.py  lalr.py  lexer.py  parser.py  production_dsl.py  proto3.py  spans.py  tokens.py
src/protopy/testing/: __init__.py  corpus.py
tests/: test_basic_parse.py  test_fuzz_roundtrip.py  test_generated_corpus_on_disk.py  test_snapshot_corpus.py  test_third_party_required.py
tests/.hypothesis/constants/: 1e336ddac1e3714c  2ad4edd3f46559a1  63638b497815b85a  63e9aa3dfcf9868c  6fa35bf7d33ac654  869b698e6af90419  c5d1dde7f3b1a736  e35bd2258c8ee17b  f17cb4a759a4d4b3  f302252ebeeb2731
