[project]
name = "protopy"
version = "0.1.0"
description = "Proto3 parser with a custom AST, hand-written tokenizer, and from-scratch LALR(1) parser."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "protopy contributors" }]
keywords = ["protobuf", "proto3", "parser", "lalr", "ast"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Compilers",
]
dependencies = []

[project.urls]
Repository = "https://example.invalid/protopy"

[project.scripts]
protopy = "protopy.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protopy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "hypothesis>=6.120.0",
  "protobuf>=5.29.0",
  "grpcio-tools>=1.66.0",
  "ruff>=0.8.0",
  "mypy>=1.14.0",
]

